tests/ui/const-generics/early/const-arg-empty-macro-expansion.stderr
error[E0308]: mismatched types
  --> $DIR/const-arg-empty-macro-expansion.rs:8:10
   |
LL | impl Foo<{ empty!{}; }> {}
   |          ^^^^^^^^^^^^^ expected `usize`, found `()`

error[E0308]: mismatched types
  --> $DIR/const-arg-empty-macro-expansion.rs:11:10
   |
LL | impl Foo<{ empty!(); }> {}
   |          ^^^^^^^^^^^^^ expected `usize`, found `()`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
